<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateBookActivity">

    <EditText
        android:id="@+id/fullNameCreateEditText"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/nameTextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="331dp"
        android:layout_height="341dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullNameCreateEditText"
        app:layout_constraintVertical_bias="0.006">

        <TableRow
            android:layout_width="289dp"
            android:layout_height="135dp">

            <TextView
                android:id="@+id/publisherCreateNameTextView"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="center|left"
                android:text="@string/publisherOnCreateText" />


            <EditText
                android:id="@+id/publisherCreateEditText"
                android:layout_width="210dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="center|end"
                android:hint="@string/publisherOnCreateEditText"
                android:inputType="textPersonName"
                android:scrollbarSize="2dp"
                android:textSize="11sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/authorCreateTextView"
                android:layout_width="104dp"
                android:layout_height="32dp"
                android:gravity="center|left"
                android:text="@string/authorOnCreateText" />

            <EditText
                android:id="@+id/authorCreateEditText"
                android:layout_width="210dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="center|end"
                android:hint="@string/authorOnCreateEditText"
                android:inputType="textPersonName"
                android:scrollbarSize="2dp"
                android:textSize="11sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/yearCreateTextView"
                android:layout_width="104dp"
                android:layout_height="32dp"
                android:gravity="center|left"
                android:text="@string/yearOnCreateText" />

            <EditText
                android:id="@+id/yearCreateEditText"
                android:layout_width="210dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="center|end"
                android:hint="@string/yearOnCreateEditText"
                android:inputType="textPersonName"
                android:scrollbarSize="2dp"
                android:textSize="11sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/priceCreateTextView"
                android:layout_width="104dp"
                android:layout_height="32dp"
                android:gravity="center|left"
                android:text="@string/priceOnCreateText" />

            <EditText
                android:id="@+id/priceCreateEditText"
                android:layout_width="210dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="center|end"
                android:hint="@string/priceOnCreateEditText"
                android:inputType="textPersonName"
                android:scrollbarSize="2dp"
                android:textSize="11sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/addressCreateTextView"
                android:layout_width="121dp"
                android:layout_height="32dp"
                android:gravity="center|left"
                android:text="@string/addressOnCreateText" />

            <EditText
                android:id="@+id/addressCreateEditText"
                android:layout_width="210dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="center|end"
                android:hint="@string/addressOnCreateEditText"
                android:inputType="textPersonName"
                android:scrollbarSize="2dp"
                android:textSize="11sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/availableCreateTextView"
                android:layout_width="104dp"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:text="@string/availableOnCreateText" />

            <CheckBox
                android:id="@+id/availableCreateCheckBox"
                android:layout_width="6dp"
                android:layout_height="36dp"
                android:layout_gravity="right"
                android:clickable="false" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/amountNumCreateTextView"
                android:layout_width="104dp"
                android:layout_height="32dp"
                android:gravity="center|left"
                android:text="@string/amountOnCreateText" />

            <EditText
                android:id="@+id/amountNumCreateEditText"
                android:layout_width="210dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="center|end"
                android:hint="@string/amountOnCreateEditText"
                android:inputType="textPersonName"
                android:scrollbarSize="2dp"
                android:textSize="11sp" />

        </TableRow>

    </TableLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createNewBookButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="createNewBook"
        android:text="@string/buttonOnCreateText"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
        app:layout_constraintVertical_bias="0.17" />

</androidx.constraintlayout.widget.ConstraintLayout>